--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ subjects:
 - !lcsh 'Western stories'
 - !lcsh 'Ranch life -- Fiction'
 - !lcc 'PR'
+- GITenberg
 title: 'The One-Way Trail: A story of the cattle country'
 url: http://www.gutenberg.org/ebooks/30113
